--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -152,7 +152,7 @@
 			</form>
 
 
-
+			{% if modelArr.institucion_id != 1 %}
 			<div class="card">
 				<div class="card-header">
 					<h4 class="card-title">PRODUCTO</h4>
@@ -189,6 +189,7 @@
 					{% endif %}
 				</div>
 			</div>
+			{% endif %}
 
 			<form method="POST" action="{{ root }}/institucion/guardar" id="form-edit-seguimiento" class="form-horizontal" autocomplete="off" enctype="multipart/form-data">
 				<div class="card">
@@ -253,6 +254,7 @@
 				</div>
 			</form>
 
+			{% if modelArr.institucion_id == 1 %}
 			<div class="card">
 				<div class="card-header">
 					<h4 class="card-title">APLICATIVO TARJETAS</h4>
@@ -1678,6 +1680,7 @@
 					</div>
 				</div>
 			</div>
+			{% endif %}
 		</div>
 	</div>
 
