--- a/views/paleta/editar.twig
+++ b/views/paleta/editar.twig
@@ -84,6 +84,30 @@
 						</div>
 
 						<div class=" row mb-4">
+							<label for="inputName" class="col-md-2 form-label">Título nivel 1</label>
+							<div class="col-md-4 col-informacion">
+								<input type="text" class="form-control" v-model="model.titulo_nivel1" placeholder="Título nivel 1" v-autoname/>
+							</div>
+
+							<label for="inputName" class="col-md-2 form-label">Título nivel 2</label>
+							<div class="col-md-4 col-informacion">
+								<input type="text" class="form-control" v-model="model.titulo_nivel2" placeholder="Título nivel 2" v-autoname/>
+							</div>
+						</div>
+
+						<div class=" row mb-4">
+							<label for="inputName" class="col-md-2 form-label">Título nivel 3</label>
+							<div class="col-md-4 col-informacion">
+								<input type="text" class="form-control" v-model="model.titulo_nivel3" placeholder="Título nivel 3" v-autoname/>
+							</div>
+
+							<label for="inputName" class="col-md-2 form-label">Título nivel 4</label>
+							<div class="col-md-4 col-informacion">
+								<input type="text" class="form-control" v-model="model.titulo_nivel4" placeholder="Título nivel 4" v-autoname/>
+							</div>
+						</div>
+
+						<div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Observaciones</label>
 							<div class="col-md-4 col-informacion">
 								<textarea rows="3" v-model="model.observaciones" class="form-control" placeholder="Observaciones" v-autoname></textarea>
@@ -108,7 +132,6 @@
 				</div>
 			</form>
 
-
 			<div class="card">
 				<div class="card-body">
 					<div class="panel-group1" id="accordion1">
@@ -120,7 +143,6 @@
 							</div>
 							<div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-expanded="false">
 								<div class="panel-body">
-									<h1 class="text-primary">COBRANZA</h1>
 									<div class="table-responsive">
 										<table class="table border text-nowrap text-md-nowrap table-bordered table-sm mb-0">
 											<thead>
@@ -132,7 +154,7 @@
 											</tr>
 											</thead>
 											<tbody>
-											<tr v-for="pd in paleta_detalle">
+											<tr v-for="pd in paleta_arbol">
 												<td><span v-html="pd.nivel1"></span></td>
 												<td><span v-html="pd.nivel2"></span></td>
 												<td><span v-html="pd.nivel3"></span></td>
@@ -208,6 +230,7 @@
 				cat: {{ catalogos|raw }},
 				model: {{ model|raw }},
 				paleta_detalle: {{ paleta_detalle|raw }},
+				paleta_arbol: {{ paleta_arbol|raw }},
 				instituciones: {{ instituciones|raw }},
 			},
 			watch: {},
